# FBANet

./: .gitignore  Makefile  README.md  env.yaml  notebook.ipynb  pyproject.toml
fba_net/: ManualDataset.py  assert_shape.py  common.py  dataset.py  generate_patches_SIDD.py  homography_alignment.py  keygen.py  losses.py  model.py  options.py  pipeline.py  sintel_pipeline.py  swap_channels_last_to_third_from_last.py  test.py  test_in_any_resolution.py  train.py
fba_net/blocks/: fba_net.py  federated_affinity_fusion.py  residual.py  upsampler.py
fba_net/layers/: conv2d.py  conv2d_transpose.py  conv_projection.py  downsample.py  downsample_flatten.py  drop_path.py  fba_net.py  input_projection.py  linear_projection.py  linear_projection_concat_kv.py  locally_enhanced_feed_forward.py  multi_layer_perceptron.py  output_projection.py  output_projection_hwc.py  pixel_shuffle.py  separable_conv2d.py  squeeze_and_excitation.py  upsample.py  upsample_flatten.py  window_attention.py
fba_net/models/: fba_net.py
fba_net/optical_flow/: __init__.py  register.py  visualize.py
fba_net/pipeline/: __init__.py  real_bsr_dataset.py  real_bsr_iterator.py  stages.py
fba_net/registration/: pyramid.py
fba_net/registration/optical_flow/: register.py
fba_net/utils/: __init__.py  antialias.py  bundle_submissions.py  calculate_parameters.py  dataset_utils.py  dir_utils.py  image_utils.py  loader.py  model_utils.py  post_processing_vis.py
fba_net/warmup_scheduler/: run.py  scheduler.py
